# opentdb-rs

./: .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: 01_base_usage.rs  02_minimalistic_usage.rs  03_errhandling_response_code.rs  04_setting_base_url.rs
src/: api_request.rs  api_response.rs  lib.rs
src/builder/: mod.rs  simple.rs  strict.rs
src/enums/: category.rs  difficulty.rs  encoding.rs  mod.rs  question_type.rs  response_code.rs
tests/: builder_test.rs  integration_test.rs  simple_builder_test.rs  simple_enum_test.rs
tests/data/response/: api_3q_typeboolean.json  api_fail_respcode_1.json  api_fail_respcode_2.json  api_fail_respcode_3.json  api_fail_respcode_4.json  api_session_new.json  api_session_reset.json
