[package]
name = "opentdb"
description = "An implementation of the Open Trivia Database API in Rust <https://opentdb.com>"
repository = "https://github.com/zarthus/opentdb-rs"
version = "0.1.0"
authors = ["Jos Ahrens <contact@liefland.net>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
keywords = ["trivia", "otdb", "open-trivia"]
categories = ["api-bindings", "games"]

[badges]
travis-ci = { repository = "zarthus/opentdb-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = "0.9.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"